# aether-plugin

./: .gitignore  AUDIT.md  CMakeLists.txt
art/: README.md
art/assets/: make_face_shipped.py
art/scripts/: assemble_filmstrips.py  crt_effect.py  crt_effect_v10.py  crt_effect_v2.py  crt_effect_v3.py  crt_effect_v4.py  crt_effect_v5.py  crt_effect_v6.py  crt_effect_v7.py  crt_effect_v8.py  crt_effect_v9.py  dalle_knobs_to_filmstrip.py  debug_materials.py  gen_dalle_knobs.py  gen_knobs_curl.sh  gen_knobs_v2.py  layout_v7.txt  make-face-skin.py  make-face-v10.py  make-face-v11.py  make-face-v12.py  make-face-v13.py  make-face-v14.py  make-face-v2.py  make-face-v3.py  make-face-v4.py  make-face-v5.py  make-face-v6.py  make-face-v7.py  make-face-v8.py  make-face-v9.py  make_dalle_filmstrips.py  make_knob_strips.py  make_knobs_random.py  make_knobs_v3.py  make_knobs_v4.py  make_knobs_v5.py  make_knobs_v6_matte.py  metal_test.py  overlay_indicators.py  (+44 more)
artwork/: aether-artwork.html
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: LFOProcessor.h  PsychedelicProcessor.h  TransientShaper.h  VinylProcessor.h
